--- a/notebooks/04_ruc.ipynb
+++ b/notebooks/04_ruc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ik0adj70xkxjizs773dyh6p8zhh6inikyyz3vgtudzht2x44ct4q\n"
+      "90jqfgczabsbjipdmdopfecbyo5no6aw6xh9l39m9ye1713qnql6\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
     "from langchain_core.messages import SystemMessage, HumanMessage\n",
     "\n",
     "load_dotenv()\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\", temperature=0.5, max_tokens=10000)\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.5, max_tokens=10000)\n",
     "\n",
     "system_message = SystemMessage(content=\"\"\"\n",
     "Extract relevant business or personal data from the provided website text and return it in a structured JSON format.\n",
@@ -179,12 +179,12 @@
     "\n",
     "The output should be a JSON object with the following keys:\n",
     "- \"status\": A boolean value, true if at least one data point is extracted, and false otherwise.\n",
-    "- \"Número de RUC\": Always a string, include the extracted data or an empty string if not found.\n",
-    "- \"NombrePersonaOrEmpresa\": Always a string, include the extracted data or an empty string if not found.\n",
-    "- \"Nombre Comercial\": Always a string, include the extracted data or an empty string if not found.\n",
-    "- \"Estado del Contribuyente\": Always a string, include the extracted data or an empty string if not found.\n",
-    "- \"Condición del Contribuyente\": Always a string, include the extracted data or an empty string if not found.\n",
-    "- \"Domicilio Fiscal\": Always a string, include the extracted data or an empty string if not found.\n",
+    "- \"ruc\": Always a string, include the extracted data or an empty string if not found.\n",
+    "- \"nombrePersonaEmpresa\": Always a string, include the extracted data or an empty string if not found.\n",
+    "- \"nombreComercial\": Always a string, include the extracted data or an empty string if not found.\n",
+    "- \"estadoContribuyente\": Always a string, include the extracted data or an empty string if not found.\n",
+    "- \"condicionContribuyente\": Always a string, include the extracted data or an empty string if not found.\n",
+    "- \"domicilioFiscal\": Always a string, include the extracted data or an empty string if not found.\n",
     "\n",
     "# Example\n",
     "\n",
@@ -196,12 +196,12 @@
     "\n",
     "{\n",
     "  \"status\": true,\n",
-    "  \"Número de RUC\": \"123456789\",\n",
-    "  \"NombrePersonaOrEmpresa\": \"EjemploCorp\",\n",
-    "  \"Nombre Comercial\": \"\",\n",
-    "  \"Estado del Contribuyente\": \"Activo\",\n",
-    "  \"Condición del Contribuyente\": \"Habido\",\n",
-    "  \"Domicilio Fiscal\": \"Calle Falsa 123\"\n",
+    "  \"ruc\": \"123456789\",\n",
+    "  \"nombrePersonaEmpresa\": \"EjemploCorp\",\n",
+    "  \"nombreComercial\": \"\",\n",
+    "  \"estadoContribuyente\": \"Activo\",\n",
+    "  \"condicionContribuyente\": \"Habido\",\n",
+    "  \"domicilioFiscal\": \"Calle Falsa 123\"\n",
     "}\n",
     "\n",
     "# Notes\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -224,17 +224,15 @@
      "output_type": "stream",
      "text": [
       "Código de estado: 200\n",
-      "```json\n",
       "{\n",
       "  \"status\": true,\n",
-      "  \"Número de RUC\": \"20573215045\",\n",
-      "  \"NombrePersonaOrEmpresa\": \"LEAD WORKING PARTNER SAC\",\n",
-      "  \"Nombre Comercial\": \"\",\n",
-      "  \"Estado del Contribuyente\": \"ACTIVO\",\n",
-      "  \"Condición del Contribuyente\": \"HABIDO\",\n",
-      "  \"Domicilio Fiscal\": \"JR. AREQUIPA NRO. 1085 (CERCA AL COLEGIO MARIANO BONIN)  HUANUCO - LEONCIO PRADO - RUPA-RUPA\"\n",
-      "}\n",
-      "```\n"
+      "  \"ruc\": \"20573215045\",\n",
+      "  \"nombrePersonaEmpresa\": \"LEAD WORKING PARTNER SAC\",\n",
+      "  \"nombreComercial\": \"\",\n",
+      "  \"estadoContribuyente\": \"ACTIVO\",\n",
+      "  \"condicionContribuyente\": \"HABIDO\",\n",
+      "  \"domicilioFiscal\": \"JR. AREQUIPA NRO. 1085 (CERCA AL COLEGIO MARIANO BONIN)  HUANUCO - LEONCIO PRADO - RUPA-RUPA\"\n",
+      "}\n"
      ]
     }
    ],
